--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2018-10-18
+2018-11-03
 
         * Version 1.6.0 released
         ========================
 
+        Add code generator (#2709)
         Add csbkgmodel script (#2694)
         Compute DETX and DETY in ctmodel if they are not available (#2694)
         Do no longer set missing boundaries in ctool::get_observations and
