Classical analysis moved to notebook

--- a/doc/source/users/tutorials/hess_dr1/selecting_events.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/selecting_events.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "<div align=\"right\"><a href=\"../../../_downloads/howto_advanced_python_fitting.ipynb\" download=\"selecting_events_HESSDR1.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
+    "<div align=\"right\"><a href=\"../../../_downloads/selecting_events.ipynb\" download=\"selecting_events.ipynb\"><img src=\"../../../_static/download-notebook.jpg\" alt=\"Download Notebook\" height=\"40\"></a></div>"
    ]
   },
   {
