--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.6.0 released
         ========================
 
+        Apply event bin weighting in ctmodel for stacked computation (#2721)
         Add code generator (#2709)
         Add csbkgmodel script (#2694)
         Compute DETX and DETY in ctmodel if they are not available (#2694)
