--- a/doc/source/users/tutorials/hess_dr1/unbinned.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/unbinned.ipynb
@@ -886,9 +886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why are there such bad residuals at low energies? Non-stacked residuals look very good. Threshold effect?\n",
-    "\n",
-    "Finally you should also inspect the spatial residuals. You do this using the csresmap script."
+    "The spectral fit looks satisfactory. Finally you should also inspect the spatial residuals. You do this using the csresmap script."
    ]
   },
   {
