--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -41,6 +41,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2714 <https://cta-redmine.irap.omp.eu/issues/2714>`_] -
+  Enable :ref:`ctbin` to produce counts cubes for a joint binned analysis
 * [`2685 <https://cta-redmine.irap.omp.eu/issues/2685>`_] -
   Add ``ctbkgcube::cntcube()`` method
   Account for varying energy thresholds in :ref:`ctbin` weight computation
