--- a/doc/source/admin/release_history/1.6.rst
+++ b/doc/source/admin/release_history/1.6.rst
@@ -112,6 +112,8 @@ New features
 Clean up
 --------
 
+* [`2758 <https://cta-redmine.irap.omp.eu/issues/2758>`_] -
+  CTA background rates are now per ontime
 * Remove ``ctools::is_valid_filename()`` method
 * [`2045 <https://cta-redmine.irap.omp.eu/issues/2045>`_] -
   Remove ``ctools::time_reference`` constant
