--- a/doc/source/users/tutorials/hess_dr1/classical.ipynb
+++ b/doc/source/users/tutorials/hess_dr1/classical.ipynb
@@ -100,7 +100,7 @@
     "phagen['dec'] = 22.01\n",
     "phagen['rad'] = 0.2\n",
     "phagen['bkgmethod'] = 'REFLECTED'\n",
-    "phagen['use_irf_bkg'] = False\n",
+    "phagen['use_model_bkg'] = False\n",
     "phagen['maxoffset'] = 2.0\n",
     "phagen['stack'] = True # treat observations separately in joint likelihood fit\n",
     "\n",
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we have used the hidden parameter *use_irf_bkg* to specify that no background model should be used in the computation of the background normalisation factor, which is simply assumed to be the ratio of the solid angles of On/Off regions.\n",
+    "Note that we have used the hidden parameter *use_model_bkg* to specify that no background model should be used in the computation of the background normalisation factor, which is simply assumed to be the ratio of the solid angles of On/Off regions.\n",
     "\n",
     "## Likelihood fit\n",
     "\n",
