--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-11-22
+2018-11-23
 
         * Version 1.6.0 released
         ========================
@@ -8,6 +8,7 @@
         Apply event bin weighting in ctmodel for stacked computation (#2721)
         Enable ctbin to produce counts cubes for a joint binned analysis (#2714)
         Add Jupyter notebooks for H.E.S.S. DR1 (#2712)
+        csphagen now creates appropriate model for likelihood fitting (#2711)
         csphagen now supports any kind of background model (#2710)
         Add code generator (#2709)
         Add csbkgmodel script (#2694)
