--- a/NEWS
+++ b/NEWS
@@ -203,6 +203,8 @@ of the input observations (#2054).
 
 ctskymap - CTA sky mapping
 --------------------------
+Add exclusion_map() methods (#2725)
+
 Add the "inmap", "iterations" and "threshold" parameters. The hidden
 "inmap" parameter allows specifying a sky map file containing a "COUNTS"
 and "ACCEPTANCE" extension which avoids looping over event lists in an
@@ -281,6 +283,8 @@ None
 
 cslightcrv - Generate light curve
 ---------------------------------
+Add exclusion_map() methods (#2725)
+
 Add hidden "use_model_bkg" parameter for forwarding to csphagen.
 
 Add hidden "nthreads" parameter and implement parallelisation of light
@@ -334,6 +338,8 @@ Use time reference of input observations if time selection is given in MET
 
 csphagen - Generate On/Off observations
 ---------------------------------------
+Add exclusion_map() methods (#2725)
+
 A "outmodel" parameter was added and the script now produces an appropriate
 background model for maximum likelihood model fitting. The script now also
 sets the appropriate fit statistic depending on the "use_model_bkg" parameter
@@ -367,6 +373,8 @@ tutorial was added to the user documentation (#2404).
 
 csphasecrv - Generate phase curve
 ---------------------------------
+Add exclusion_map() methods (#2725)
+
 Add hidden "nthreads" parameter and implement parallelisation of computations
 (#2421).
 
