--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-12-11
+2018-12-12
 
         * Version 1.6.0 released
         ========================
@@ -7,6 +7,7 @@
         CTA background rates are now per ontime (#2758)
         Add exclusion_map() methods to ctskymap, csphagen, cslightcrv and
           csphasecrv (#2725)
+        Add show_significance_distribution.py example script (#2723)
         Apply event bin weighting in ctmodel for stacked computation (#2721)
         Enable ctbin to produce counts cubes for a joint binned analysis (#2714)
         Add ctfindvar tool (#2713)
